refactor(course AP):I with DTOs repository and access middleware
